| Summary: | ASTERISK-21232: Asterisk sends AUDIO REINVITE when session timer expires in T38 call | ||||
| Reporter: | NITESH BANSAL (nbansal) | Labels: | |||
| Date Opened: | 2013-03-10 15:14:05 | Date Closed: | 2013-03-14 20:52:32 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Channels/chan_sip/General | ||
| Versions: | 11.2.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Debian Squeeze x86_64 | Attachments: | ( 0) dont-send-audio-reinvite-for-sess-timer-in-t38-call.patch | ||
| Description: | Scenario: A and B set up a call, audio stream is negotiated in the initial INVITE. A and B negotiate T38 to start a fax session. During the fax session,
session timer expires and A sends out a session refresh REINVITE. Expected Behaviour: A should send the T38 REINVITE. Observed Behaviour: A sends the AUDIO REINVITE. | ||||
| Comments: | By: NITESH BANSAL (nbansal) 2013-03-10 15:18:01.245-0500 I have made a patch for this. Please review this. By: Matt Jordan (mjordan) 2013-03-14 20:26:54.512-0500 Yup, that looks correct. Thanks for the patch! | ||||